--- a/style.css
+++ b/style.css
@@ -2,25 +2,42 @@ html {
     font-family: sans-serif;
     box-sizing: border-box;
     font-size: 10px;
-    background: #6d6fdd;
+    
 }
 
+*, *:before, *:after {
+    box-sizing: inherit;
+  }
   
 body {
     padding: 0;
     margin: 0;
   }
 
+div{
+    padding: 10px;
+}
+
 h1 {
+    background: #0a0eee;
     text-align: center;
     font-size: 10rem;
     line-height: 1;
     margin-bottom: 0;
     color: white;
+    margin-top: 0;
 }
 
 li {
     font-weight: bold;
     font-size: 2.5rem;
-    color: white;
+    color: black;
+}
+
+.container {
+    margin-top: 50px;
+    display: grid;
+    grid-template-columns: 400px 400px 400px;
+    grid-template-rows: repeat(10,70px);
+
 }
