--- a/style.css
+++ b/style.css
@@ -35,6 +35,8 @@ li {
 }
 
 .container {
+    align-items: center;
+    justify-content: center;
     margin-top: 50px;
     display: grid;
     grid-template-columns: 400px 400px 400px;
