--- a/style.css
+++ b/style.css
@@ -37,6 +37,7 @@ li {
 .container {
     align-items: center;
     justify-content: center;
+    font-style: bold;
     margin-top: 50px;
     display: grid;
     grid-template-columns: 400px 400px 400px;
