--- a/style.css
+++ b/style.css
@@ -29,6 +29,11 @@ h1 {
     margin-top: 0;
 }
 
+h2{
+    text-align: center;
+    font-size: 8rem;
+}
+
 li {
     font-weight: bold;
     font-size: 2.5rem;
